<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/btLoadInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Hello World!"
            android:visibility="gone" />
    </ScrollView>
    <Button
        android:id="@+id/btLoadInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="정보 가져오기"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btRandomTest"
        app:layout_constraintTop_toBottomOf="@id/tvInfo"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btRandomTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="랜덤테스트"
        app:layout_constraintStart_toEndOf="@id/btLoadInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btLoadInfo"
        app:layout_constraintBottom_toBottomOf="@id/btLoadInfo"/>

</androidx.constraintlayout.widget.ConstraintLayout>